--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2|^7.4|^8.0|^8.2"
+        "php": "^7.2|^7.4|^8.0|^8.2",
+        "twig/twig": "^3.20"
     }
 }
