--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
     "require": {
         "php": "^7.2|^7.4|^8.0|^8.2",
         "twig/twig": "^3.20"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    },
+    "suggest": {
+        "sentry/sentry": "^4.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
