--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,13 @@
     "suggest": {
         "sentry/sentry": "^4.8",
         "vlucas/phpdotenv": "^5.6"
+    },
+    "archive": {
+        "exclude": [
+            ".github",
+            ".vscode",
+            "tests",
+            "vendor"
+        ]
     }
 }
